# ForwardDiff

./: CMakeLists.txt  LICENSE  README.md  forwarddif.f90  forwarddif_save.f90  fpm.toml  test1.f90  test_forwarddif.f90
.github/workflows/: test.yaml
cmake/: fypp.cmake
src/: CMakeLists.txt  forwarddif.f90  forwarddif_const.f90  forwarddif_derivative.f90  forwarddif_dual.f90  forwarddiff.f90  forwarddiff_const.f90  forwarddiff_derivative.f90  forwarddiff_dual.f90
test/: CMakeLists.txt  fypp_example.fypp  test_forwarddif.f90  test_forwarddiff.f90  test_jax.py  test_sparse.f90
